--- a/assets/styles/index.css
+++ b/assets/styles/index.css
@@ -64,3 +64,45 @@ input{
     margin-left: auto;
     margin-right: auto;
 }
+
+@media only screen and (max-width: 750px){
+    .sectionTwo{
+        width: 300px;
+        height: 300px;
+        position: fixed;
+        bottom: 260px;
+        top: auto;
+        display: block;
+    }
+    .container{
+        width: 300px;
+    }
+    .sectionOne{
+        width: 100%;
+        margin-right: 0;
+    }
+    input {
+        width: 300px;
+        border-radius: 12px;
+    }
+    .logo {
+        width: 200px;
+        height: auto;
+        margin: 0;
+        bottom: 200px;
+        position: fixed;
+    }
+    #key {
+        width: 260px;
+        height: 55px;
+        font-size: 20px;
+        position: fixed;
+        bottom: 100px;
+    }
+    #submit {
+        height: 72px;
+        font-size: 30px;
+        position: fixed;
+        bottom: 30px;
+    }
+}
