--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -4,6 +4,7 @@ header{
     background-color: rgba(255,255,255,75%);
     backdrop-filter: blur(15px);
     position: fixed;
+    z-index: 1;
 }
 
 [data-theme="dark"] header{
