--- a/assets/styles/index.css
+++ b/assets/styles/index.css
@@ -65,6 +65,10 @@ input{
     margin-right: auto;
 }
 
+h1{
+    opacity: 0;
+}
+
 @media only screen and (max-width: 750px){
     .sectionTwo{
         width: 300px;
