--- a/assets/styles/covers.css
+++ b/assets/styles/covers.css
@@ -7,17 +7,16 @@
 .destinationB2{
     background: url(../covers/destination-b2.jpg);
     background-size: cover;
-    background-position: 50%;
 }
 
 .words1100{
     background: url(../covers/1100.jpg);
     background-size: cover;
-    background-position: 50%;
+    background-position: 50% 38%;
 }
 
 .bj-yl{
     background: url(../covers/bj-yellow.jpg);
     background-size: cover;
-    background-position: 50%;
+    background-position: 50% 20%;
 }
