--- a/assets/styles/covers.css
+++ b/assets/styles/covers.css
@@ -20,3 +20,9 @@
     background-size: cover;
     background-position: 50% 20%;
 }
+
+.collageEssays{
+    background: url(../covers/collage-essays.jpg);
+    background-size: cover;
+    background-position: 50% 20%;
+}
