--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -32,7 +32,7 @@ header{
     margin-top: 36px;
     width: 55px;
     height: 55px;
-    background: #0000000f;
+    background: url(../icons/icon\ dark\ mode.svg) #0000000f;
     background-position: 50%, 50%;
     background-repeat: no-repeat;
     background-size: cover;
@@ -70,25 +70,29 @@ header{
 
 .search{
     margin-left: 90px;
-    width: 1090px;
+    width: 1050px;
     height: 55px;
     border-radius: 15px;
     border: none;
-    background: #0000000f;
+    background: url(../icons/icon\ search.svg) #0000000f;
+    background-size: inherit;
+    background-repeat: no-repeat;
+    background-position: 0% 50%;
     font-family: 'Main', sans-serif;
-    padding-left: 20px;
+    padding-left: 60px;
     padding-right: 20px;
     position: absolute;
     top: 36px;
 }
 
 [data-theme="dark"] .dark-mode{
-    background: #ffffff33;
+    background: url(../icons/icon\ light\ mode.svg) #6868682e;
     transition: 0.3s;
 }
 
 [data-theme="dark"] .search{
-    background: #ffffff33;
+    opacity: 0.8;
+    filter: invert(1);
     transition: 0.3s;
 }
 
@@ -126,7 +130,7 @@ li a{
     margin-right: auto;
 }
 
-button{
+.pdfBox button{
     cursor: pointer;
     background: linear-gradient(50deg, #FF0B3A, #FFAD08);
     background-repeat: no-repeat;
@@ -144,7 +148,7 @@ button{
     margin-left: 30px;
 }
 
-[data-theme="dark"] button{
+[data-theme="dark"] .pdfBox button{
     opacity: 0.85;
     transition: 0.3s;
 }
@@ -167,11 +171,12 @@ li:not(:last-child){
     }
     .search {
         margin-left: 0;
-        width: 260px;
+        width: 230px;
         height: 45px;
         top: 75px;
         display: block;
         border-radius: 12px;
+        padding-left: 50px;
     }
     .contact{
         display: none;
@@ -182,6 +187,10 @@ li:not(:last-child){
         margin-right: 0;
         border-radius: 12px;
         margin-top: 18px;
+        margin-left: 15px;
+    }
+    #darkSwitch{
+        margin: 0;
     }
     li:not(:last-child) {
         margin-right: 0px;
@@ -196,7 +205,7 @@ li:not(:last-child){
         width: 265px;
         height: 265px;
     }
-    button{
+    .pdfBox button{
         width: 265px;
         margin-left: 17px;
         height: 65px;
