--- a/assets/styles/covers.css
+++ b/assets/styles/covers.css
@@ -26,3 +26,9 @@
     background-size: cover;
     background-position: 50% 4%;
 }
+
+.oxford-advanced{
+    background: url(../covers/oxford-word-skills-advanced.jpg);
+    background-size: cover;
+    background-position: 50% 4%;
+}
